--- a/Blockchain/package.json
+++ b/Blockchain/package.json
@@ -9,6 +9,9 @@
     "start": "node ./app",
     "dev": "nodemon ./app"
   },
+  "jest": {
+    "testEnvironment": "node"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -18,8 +21,10 @@
   },
   "dependencies": {
     "crypto-js": "^3.1.9-1",
+    "elliptic": "^6.4.0",
     "express": "^4.16.3",
     "nodemon": "^1.17.5",
+    "uuid": "^3.2.1",
     "ws": "^5.2.0"
   }
 }
